Fix mobile left-align for profile social icons and section titles

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -328,12 +328,16 @@ Version      : 1.0
         margin-top: 24px;
     }
 
-    .about-image-part {
-        text-align: left;
+    .about-social ul {
+        justify-content: flex-start;
+    }
+
+    .about-image-part img {
+        margin-left: 0;
     }
 
     .section-title {
-        text-align: left;
+        text-align: left !important;
     }
 
     .section-title p {
